Started with adding float switch functionality to the API -> check, if the water tank has enough water
