# api/swagger/gardenbot-api.yaml
@@ -69,3 +69,22 @@ paths:
           in: header
           type: string
           required: true
+  /waterstatus:
+    get:
+      summary: Returns watering activities
+      description: Returns true, if there's enough water in the tank, otherwise false
+      operationId: classes.gardenbot-api.get_water_status
+      produces:
+      - application/json;
+      responses:
+        200:
+          description: history response
+          schema:
+            type: string
+          examples:
+            "text/plain": "Showing water status"
+      parameters:
+        - name: API-Key
+          in: header
+          type: string
+          required: true
